RESOLVED FIXED180849
Service Worker Registration promise is sometimes not rejected when the script load fails
https://bugs.webkit.org/show_bug.cgi?id=180849
Summary Service Worker Registration promise is sometimes not rejected when the script...
Chris Dumez
Reported 2017-12-14 16:47:50 PST
Service Worker Registration promise is sometimes not rejected when the script load fails.
Attachments
Patch (18.69 KB, patch)
2017-12-14 19:15 PST, Chris Dumez
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (2.60 MB, application/zip)
2017-12-14 20:18 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.22 MB, application/zip)
2017-12-14 20:23 PST, EWS Watchlist
no flags
Patch (15.53 KB, patch)
2017-12-14 21:22 PST, Chris Dumez
no flags
Patch (16.81 KB, patch)
2017-12-14 22:15 PST, Chris Dumez
no flags
Patch (17.48 KB, patch)
2017-12-15 09:17 PST, Chris Dumez
no flags
Patch (17.47 KB, patch)
2017-12-15 09:57 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-12-14 19:15:50 PST
EWS Watchlist
Comment 2 2017-12-14 20:18:27 PST
Comment on attachment 329439 [details] Patch Attachment 329439 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5668394 New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/claim-not-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/claim-affect-other-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/register-default-scope.https.html imported/w3c/web-platform-tests/service-workers/service-worker/service-worker-csp-default.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/service-worker-csp-script.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting-installed.https.html imported/w3c/web-platform-tests/service-workers/service-worker/claim-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/register-same-scope-different-script-url.https.html
EWS Watchlist
Comment 3 2017-12-14 20:18:28 PST
Created attachment 329449 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 4 2017-12-14 20:23:17 PST
Comment on attachment 329439 [details] Patch Attachment 329439 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/5668282 New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/claim-not-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/claim-affect-other-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/register-default-scope.https.html imported/w3c/web-platform-tests/service-workers/service-worker/service-worker-csp-default.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/service-worker-csp-script.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting.https.html imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting-installed.https.html imported/w3c/web-platform-tests/service-workers/service-worker/claim-using-registration.https.html imported/w3c/web-platform-tests/service-workers/service-worker/register-same-scope-different-script-url.https.html
EWS Watchlist
Comment 5 2017-12-14 20:23:18 PST
Created attachment 329450 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Chris Dumez
Comment 6 2017-12-14 20:41:46 PST
(In reply to Build Bot from comment #4) > Comment on attachment 329439 [details] > Patch > > Attachment 329439 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/5668282 > > New failing tests: > imported/w3c/web-platform-tests/service-workers/service-worker/claim-not- > using-registration.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/claim-affect- > other-registration.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/register- > default-scope.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/service- > worker-csp-default.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting- > using-registration.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/service- > worker-csp-script.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting. > https.html > imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting- > installed.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/claim-using- > registration.https.html > imported/w3c/web-platform-tests/service-workers/service-worker/register-same- > scope-different-script-url.https.html Those failures indicate that LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/resources/empty.js is missing, even though I included it in my patch. It could be that git/svn is getting confused because it is an empty file? Not sure how to address this, the file does show in my patch on bugzilla.
Chris Dumez
Comment 7 2017-12-14 21:22:24 PST
Chris Dumez
Comment 8 2017-12-14 22:15:48 PST
Chris Dumez
Comment 9 2017-12-15 09:13:01 PST
Comment on attachment 329463 [details] Patch Trying an alternative proposal from Youenn.
Chris Dumez
Comment 10 2017-12-15 09:17:14 PST
Chris Dumez
Comment 11 2017-12-15 09:57:37 PST
Chris Dumez
Comment 12 2017-12-15 11:36:57 PST
Comment on attachment 329492 [details] Patch Clearing flags on attachment: 329492 Committed r225975: <https://trac.webkit.org/changeset/225975>
Chris Dumez
Comment 13 2017-12-15 11:36:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 14 2017-12-15 11:37:35 PST
Note You need to log in before you can comment on or make changes to this bug.