Source/WebCore/workers/WorkerScriptLoader.cpp
@@ -181,6 +181,8 @@ void WorkerScriptLoader::didFail(const ResourceError& error)
 void WorkerScriptLoader::notifyError()
 {
     m_failed = true;
+    if (m_error.isNull())
+        m_error = ResourceError { errorDomainWebKitInternal, 0, url(), "Failed to load script", ResourceError::Type::General };
     notifyFinished();
 }
 
